<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ECECEC"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
  

    <TextView
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:text="@string/introhead"
        android:textColor="#F80858"
        android:textStyle="bold" />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/introInfo"
        android:textColor="#000" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
            
            <Button
                android:onClick="loginUser"
                android:text="@string/buttonLogin"
                android:layout_width="fill_parent"
    			android:layout_height="35dip"
                />
            
              <TextView
			        android:layout_width="match_parent"
			        android:layout_height="59dp"
			        android:layout_marginTop="10dip"
			        android:gravity="center"
			        android:text="@string/ticketInfo"
			        android:textColor="#000" />
			            
              <Button
                android:onClick="linkEvent"
                android:text="@string/buttonBuyTickets"
                android:layout_marginTop="30dip"
                android:layout_width="fill_parent"
    			android:layout_height="35dip"
                />

</LinearLayout>